# ukpm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
cmake/: Sanitizers.cmake
docs/packaging/: pkgbuild.schema  pkginfo.md  pkginfo.schema
src/: CMakeLists.txt  pch.h  ukpm.cc
src/core/: archive.cc  archive.h  exception.h  stub.cc
src/manifest/: manifest_base.cc  manifest_base.h  package_build.cc  package_build.h  package_info.cc  package_info.h
src/package/: binary_package.cc  binary_package.h  package_base.h  source_package.cc  source_package.h
tests/: CMakeLists.txt  stub.test.cc
tests/core/: archive.test.cc
tests/data/core/: archive.tar.zstd
tests/data/manifest/package_build/: good  missing
tests/data/manifest/package_info/: borked  good  missing
tests/data/package/: @PKGINFO  pkginfo.tar.zstd
tests/manifest/: package_build.test.cc  package_info.test.cc
tests/package/: binary_package.test.cc  source_package.test.cc
